minor wording changes 041019

--- a/phoenix.html
+++ b/phoenix.html
@@ -28,12 +28,12 @@
 
 		<div>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p class="about-fawkes"><em>Fawkes is Professor Dumbledore's companion in the Harry Potter books<br>Fawkes has many interesting qualities.</em></p>
+			<p class="about-fawkes"><em>Fawkes is Professor Dumbledore's companion in the Harry Potter books.<br>Fawkes has many interesting qualities.</em></p>
 
 			<ul class="interesting-facts">
 				<!-- your favorite animal's list items go here -->
-				<li><span>1.</span> Fawkes, like all Phoenixes, burst into flames when they grow to old, only to be reborn from the ashes.</li>
-				<li><span>2.</span> He regrows to adult form in just days.</li>
+				<li><span>1.</span> Fawkes, like all Phoenixes, burst into flames when they grow too old, only to be reborn from the ashes.</li>
+				<li><span>2.</span> The Phoenix regrows to adult form in just days.</li>
 				<li><span>3.</span> Fawkes is immune to the Basilisk stare.</li>
 				<li><span>4.</span> Fawkes tears are the only known antidote to the venom of the Basilisk.</li>
 			</ul>
@@ -44,5 +44,10 @@
 		</div>
 	</div>
   </section>
+
+  <section class="footer">
+    <p class="copyright"><strong>Made with a magic wand by Faith H. Wallace, Ph.D., &copy;  2019 • Follow Me <i class="fab fa-twitter"></i> </strong><a href="https://twitter.com/fwallacephd" data-show-count="false">@fwallacephd</a></p>
+  </section>
+
 </body>
 </html>
