--- a/phoenix.html
+++ b/phoenix.html
@@ -10,15 +10,16 @@
   <!--FONT-->
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="phoenix.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
   <div>
-		<!--Animal's Name-->
-    <h1 class="title">Fawkes the Phoenix</h1>
-    
+		
     <section class="animal-information">
+    <!--Animal's Name-->
+    <p class="title">Fawkes the Phoenix</p>
+    
 		<!-- Image of Fawkes-->
     <!--I resized the image to be 300px wide-->
     <div class="image-container">
@@ -32,10 +33,10 @@
 
 			<ul class="interesting-facts">
 				<!-- your favorite animal's list items go here -->
-				<li><span>1.</span> Fawkes, like all Phoenixes, burst into flames when they grow too old, only to be reborn from the ashes.</li>
-				<li><span>2.</span> The Phoenix regrows to adult form in just days.</li>
-				<li><span>3.</span> Fawkes is immune to the Basilisk stare.</li>
-				<li><span>4.</span> Fawkes tears are the only known antidote to the venom of the Basilisk.</li>
+				<li><span>Rebirth: </span> Fawkes, like all Phoenixes, burst into flames when they grow too old, <br>only to be reborn from the ashes.</li>
+				<li><span>Growth: </span> The Phoenix regrows to adult form in just days.</li>
+				<li><span>Immunity: </span> Fawkes is immune to the Basilisk stare.</li>
+				<li><span>Antidote: </span> Fawkes tears are the only known antidote to the venom of the Basilisk.</li>
 			</ul>
 
 			<!-- your favorite animal's description goes here -->
