--- a/card.html
+++ b/card.html
@@ -10,7 +10,7 @@
   <!--FONT-->
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="phoenix.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
