--- a/card.html
+++ b/card.html
@@ -41,7 +41,7 @@
 
 			<!-- your favorite animal's description goes here -->
 			<p class="about-phoenix"><em>What you should know about the Phoenix.</em></p>
-      <p class="about-information">Associated with the Sun, a phoenix obtains new life by arising from the ashes of its predecessor. <br> According to some sources, the phoenix dies in a show of flames and combustion, <br> although there are other sources that claim that the legendary bird dies and simply decomposes before being born again. <br> There are different traditions concerning the lifespan of the phoenix, but by most accounts the phoenix lived for 500 years before rebirth.</p>
+      <p class="about-information">Associated with the Sun, a phoenix obtains new life by arising from the ashes of its predecessor. <br> According to some sources, the phoenix dies in a show of flames and combustion, <br> although there are other sources that claim that the legendary bird dies and simply decomposes before being born again. <br> There are different traditions concerning the lifespan of the phoenix, but by most accounts the phoenix lived for 500 years before rebirth. *From <a href="https://en.wikipedia.org/wiki/Phoenix_(mythology)">Wikipedia.</a> </p>
 		</div>
 	</div>
   </section>
