--- a/card.html
+++ b/card.html
@@ -8,7 +8,7 @@
   <title>Fawkes the Phoenix</title>
 
   <!--FONT-->
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600" rel="stylesheet">
   <!--CSS-->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -23,12 +23,12 @@
     <!--I resized the image to fit-->
     <div class="image-container">
 		  <img class="image-fawkes" src="fawkes.png" alt="Fawkes the Phoenix">
-    		
+      <!--Border-->
+      <div class="border">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="about-fawkes"><em>Fawkes is Professor Dumbledore's companion in the Harry Potter books. Fawkes has many interesting qualities.</em></p>
-    </div>
+    
 
-      <!--Border-->
 			<ul class="interesting-facts">
 				<!-- your favorite animal's list items go here -->
 				<li><span>Rebirth: </span> Fawkes, like all Phoenixes, burst into flames when they grow too old, <br>only to be reborn from the ashes.</li>
@@ -40,7 +40,8 @@
 			<!-- your favorite animal's description goes here -->
 			<p class="about-phoenix"><em>What you should know about the Phoenix.</em></p>
       <p class="about-information">Associated with the Sun, a phoenix obtains new life by arising from the ashes of its predecessor. According to some sources, the phoenix dies in a show of flames and combustion, although there are other sources that claim that the legendary bird dies and simply decomposes before being born again. There are different traditions concerning the lifespan of the phoenix, but by most accounts the phoenix lived for 500 years before rebirth. *From <a href="https://en.wikipedia.org/wiki/Phoenix_(mythology)">Wikipedia.</a> </p>
-      <!--Border-->
+      </div>
+      <!--End Border-->
 
       <p class="copyright"><strong>Made with a magic wand by Faith H. Wallace, Ph.D., &copy;  2019 • Follow Me <i class="fab fa-twitter"></i> </strong><a href="https://twitter.com/fwallacephd" data-show-count="false">@fwallacephd</a></p>
 	</div>
