--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Fawkes the Phoenix</title>
 
   <!--FONT-->
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600" rel="stylesheet">
   <!--CSS-->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
